@@ -1,13 +1,34 @@
-// CCPrompt.h : header file
+/////////////////////////////////////////////////////////////////////////////
+//    License (GPLv2+):
+//    This program is free software; you can redistribute it and/or modify
+//    it under the terms of the GNU General Public License as published by
+//    the Free Software Foundation; either version 2 of the License, or
+//    (at your option) any later version.
 //
+//    This program is distributed in the hope that it will be useful, but
+//    WITHOUT ANY WARRANTY; without even the implied warranty of
+//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+//    General Public License for more details.
+//
+//    You should have received a copy of the GNU General Public License
+//    along with this program; if not, write to the Free Software
+//    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+/////////////////////////////////////////////////////////////////////////////
+/** 
+ * @file  CCPrompt.h
+ *
+ * @brief Declaration file for ClearCase dialog.
+ *
+ */
+// ID line follows -- this is updated by SVN
+// $Id$
 
 #if !defined(AFX_CCPROMPT_H__7ED564F2_CCB8_11D4_92BB_00B0D0221937__INCLUDED_)
 #define AFX_CCPROMPT_H__7ED564F2_CCB8_11D4_92BB_00B0D0221937__INCLUDED_
 
-
-/////////////////////////////////////////////////////////////////////////////
-// CCCPrompt dialog
-
+/**
+ * @brief A dialog for ClearCase checkout/checkin.
+ */
 class CCCPrompt : public CDialog
 {
 // Construction
@@ -30,6 +51,7 @@ public:
 
 // Implementation
 protected:
+	virtual BOOL OnInitDialog();
 
 	// Generated message map functions
 	//{{AFX_MSG(CCCPrompt)
@@ -46,4 +68,3 @@ public:
 // Microsoft Visual C++ will insert additional declarations immediately before the previous line.
 
 #endif // !defined(AFX_CCPROMPT_H__7ED564F2_CCB8_11D4_92BB_00B0D0221937__INCLUDED_)
-
